--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 osx_image: xcode7
 language: objective-c
 xcode_workspace: atheneum.xcworkspace
-xcode_scheme: atheneumTests
+xcode_scheme: atheneum
